# sample-amazon-q-business-custom-connector-framework

./: .gitignore  README.md
.amazonq/prompts/: Q_DEVELOPER_CUSTOM_CONNECTOR_PROMPT.md
.amazonq/rules/: rules.md
custom-connector-framework-builder-kit/: Makefile  README.md  mypy.ini  pyproject.toml
custom-connector-framework-builder-kit/examples/cdk/: .gitignore  README.md  cdk.json  package.json
custom-connector-framework-builder-kit/examples/cdk/lambdas/: .pylintrc  Makefile  pyproject.toml
custom-connector-framework-builder-kit/examples/cdk/lambdas/src/: __init__.py  create_custom_connector_custom_resource.py  requirements.txt  start_custom_connector_job.py
custom-connector-framework-builder-kit/examples/cdk/lambdas/tests/: test_create_custom_connector_custom_resource.py  test_start_custom_connector_job.py
custom-connector-framework-builder-kit/examples/cdk/lib/stacks/: base-connector-stack.ts  gitlab-connector-stack.ts  web-crawler-connector-stack.ts
custom-connector-framework-builder-kit/examples/cdk/lib/utils/: file-utils.ts
custom-connector-framework-builder-kit/examples/cdk/scripts/: ensure-requirements.sh
custom-connector-framework-builder-kit/examples/gitlab/: README.md  custom_connector_cli.py  gitlab_config.json  requirements.txt
custom-connector-framework-builder-kit/examples/web_crawler/: README.md  crawler_urls.json  custom_connector_cli.py  requirements.txt
custom-connector-framework-builder-kit/src/: __init__.py
custom-connector-framework-builder-kit/src/custom_connector_framework/: __init__.py  base_custom_connector_interfaces.py  ccf_client.py  custom_connector_interface.py  logger.py  types.py  utils.py
custom-connector-framework-builder-kit/src/custom_connector_framework/models/: __init__.py  document.py  exceptions.py  qbusiness.py
custom-connector-framework-builder-kit/tests/: conftest.py
custom-connector-framework-builder-kit/tests/custom_connector_framework/: test_custom_connector_interface.py
custom-connector-framework-infrastructure/: .gitignore  README.md
custom-connector-framework-infrastructure/cdk/: .gitignore  README.md  cdk.json  eslint.config.mjs  package.json
custom-connector-framework-infrastructure/cdk/lib/api-schemas/: schemas.ts
custom-connector-framework-infrastructure/cdk/lib/stacks/: custom-connector-framework-stack.ts
custom-connector-framework-infrastructure/cdk/model/: README.md  openapi_to_service_model.py
custom-connector-framework-infrastructure/cdk/scripts/: ensure-requirements.sh  update-service-model.sh
custom-connector-framework-infrastructure/lambdas/: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  ruff.toml
custom-connector-framework-infrastructure/lambdas/src/: __init__.py  api_handler.py  job_orchestrator_handler.py  job_status_handler.py
custom-connector-framework-infrastructure/lambdas/src/activities/: __init__.py
custom-connector-framework-infrastructure/lambdas/src/activities/batch_delete_custom_connector_documents/: __init__.py
custom-connector-framework-infrastructure/lambdas/src/activities/batch_put_custom_connector_documents/: __init__.py
custom-connector-framework-infrastructure/lambdas/src/activities/create_custom_connector/: __init__.py
custom-connector-framework-infrastructure/lambdas/src/activities/delete_custom_connector/: __init__.py
custom-connector-framework-infrastructure/lambdas/src/common/: env.py  exceptions.py  observability.py  response.py  tenant.py
custom-connector-framework-infrastructure/lambdas/tests/integ/: test_ccf_integration.py
custom-connector-framework-infrastructure/lambdas/tests/unit/: __init__.py  conftest.py  test_api_handler.py  test_job_orchestrator_handler.py  test_job_status_handler.py
docs/: CustomConnectorFrameworkOpenApiSpec.json
(+26 files in other folders)
